[package]
name = "user_input"
version = "0.1.0"
authors = ["ramsha"]
edition = "2018"
description = "User Input Made Simple"
license = "MIT"
repository = "https://github.com/ramsha18/user-input"
documentation = "https://github.com/ramsha18/user-input"
homepage = "https://github.com/ramsha18/user-input"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
